--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
     pool:
        log-leaked-sessions:
 
+  servlet:
+    multipart:
+      max-file-size: 5MB
+
 #开启日志
 logging:
   level:
@@ -33,3 +37,5 @@ jwt:
 #xml文件映射位置
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
